--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,7 @@ body {
 }
 
 .hero-section {
-    background: url('images/hero-bg.jpg') no-repeat center center;
+    background: url('../images/hero-bg.jpg') no-repeat center center;
     background-size: cover;
     height: 500px;
     display: flex;
