--- a/css/styles.css
+++ b/css/styles.css
@@ -110,3 +110,15 @@ footer {
     display: inline-block !important;
     color: white !important;
 }
+
+.hero-logo {
+    max-width: 150px; /* Logo boyutunu ayarlayın, isteğe bağlı olarak değiştirin */
+    margin-bottom: 20px; /* Logo ile başlık arasında boşluk */
+}
+
+@media (max-width: 768px) {
+    .hero-logo {
+        max-width: 100px; /* Mobil için daha küçük logo */
+        margin-bottom: 15px;
+    }
+}
